# ROS_Projects

./: README.md
Media/: Readme.txt  Screencast from 2025-06-18 08-10-18.webm  Screencast from 2025-06-18 11-21-10.webm  Screencast from 2025-06-18 11-23-12.webm  Screencast from 2025-06-23 14-17-07.webm  Screencast from 2025-07-03 11-23-30.webm  Screencast from 2025-08-26 10-17-59.webm
SDF/: Chasis.sdf  EmptyWorld.sdf  GroundWorld.sdf  LightWorld.sdf  Readme.txt  RunRosDemo.txt  publish.py  rbot_Blender.sdf  rbot_LiDAR.sdf  rbot_LiDAR_Obstacle.sdf  visualize_lidar.sdf
SDF/Blender/: Arm.dae  Base.dae  Battery.dae  Cam.dae  CamBase.dae  ForeArm.dae  LJaw.dae  LWheel.dae  LWheelLarge.dae  LiDAR.dae  RJaw.dae  RWheel.dae  RWheelLarge.dae  Robot composite.blend  Robot composite.blend1  Robot composite.dae  Robot compositeLarge.dae  Wrist.dae  WristBack.dae
Workspaces/: Readme.txt
Workspaces/ROS_Example/src/rbot_description/: CMakeLists.txt
Workspaces/ROS_Example/src/rbot_description/launch/: spawn_rbot.launch.py
Workspaces/ROS_Example/src/rbot_description/sdf/: rbot.sdf
Workspaces/ROS_ws/src/rbot_control/: package.xml  setup.cfg  setup.py
Workspaces/ROS_ws/src/rbot_control/rbot_control/: joint_publisher.py
Workspaces/ROS_ws/src/rbot_description/: package.xml
Workspaces/catkin_ws/MYROBOT_control/: CMakeLists.txt  package.xml
Workspaces/ros2_ws/src/Rbot/: package.xml  setup.cfg  setup.py
Workspaces/ros2_ws/src/Rbot/Rbot/: joint_listener.py
