<?xml version="1.0"?>
<package format="3">
	<name>rbot_description</name>
	<version>0.1.0</version>
	<description>2WD robot sdf and launch files</description>
	<maintainer email="sarkar2ashani@gmail.com">Ashani Sarkar</maintainer>
	<license>MIT</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>ros_gz</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	
	<export>
	  <build_type>ament_cmake</build_type>gazebo_ros
	</export>
	
</package>
